Apps/navidrome/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: navidrome
  namespace: default
  labels:
    app: navidrome
spec:
  selector:
    matchLabels:
      app: navidrome
  template:
    metadata:
      labels:
        app: navidrome
    spec:
      containers:
      - name: navidrome
        image: deluan/navidrome:latest
        ports:
        - containerPort: 4533
        valumeMounts:
          - name: nd-music
            mountPath: /music

      volumes:
        - name: nd-music
          presistentVolumeClaim:
            claimName: nd-music
