Apps/navidrome/service.yml
apiVersion: v1
kind: Service
metadata:
  name: navidrome
spec:
  selector:
    app: navidrome
  ports:
  - port: 4533
    protocol: TCP
    targetPort: http
    nodePort: 4533
