Apps/navidrome/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: navidrome
  labels:
    name: navidrome
spec:
  rules:
  - host: "navidrome.sugjo.dev"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: navidrome
            port:
              number: 4533

  tls:
  - secretName: sugjodev
